--- a/native-sql-engine/cpp/CMakeLists.txt
+++ b/native-sql-engine/cpp/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 project(spark_columnar_plugin)
 
-add_definitions(-DSKIPWRITE -DSKIPCOMPRESS -DPROCESSROW)
-#add_definitions(-DSKIPWRITE -DSKIPCOMPRESS)
-add_compile_options(-g)
+#add_definitions(-DSKIPWRITE -DSKIPCOMPRESS -DPROCESSROW)
+add_definitions(-DSKIPWRITE -DSKIPCOMPRESS)
+add_compile_options(-g -mavx512f)
 
 set(root_directory ${PROJECT_BINARY_DIR})
 add_subdirectory(src)
